feat: add a lot of backend stuff (as well as authentication)

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,15 @@
 # APP
 HOST=localhost
 PORT=4000
+
+# DB
+DB_CLIENT=pg
+DB_CONNECTION_STRING=[db_client]://[db_username]:[db_user_password]@localhost:[db_port]/[db_name]
+
+# ENCRYPTION
+ENC_SALT_ROUNDS=10
+
+# JWT
+JWT_EXPIRATION_TIME=24h
+JWT_ALGORITHM=alg
+JWT_SECRET=secret
