--- a/backend/package.json
+++ b/backend/package.json
@@ -6,17 +6,32 @@
   "scripts": {
     "dev": "tsx watch src/index.ts",
     "build": "tsc -p tsconfig.build.json && tsc-alias -p tsconfig.build.json",
-    "start": "node ./build/index.js"
+    "start": "node ./build/index.js",
+    "migrate:dev": "node --import tsx ./node_modules/knex/bin/cli.js migrate:latest",
+    "migrate:dev:make": "node --import tsx ./node_modules/knex/bin/cli.js migrate:make -x ts",
+    "migrate:dev:down": "node --import tsx ./node_modules/knex/bin/cli.js migrate:down",
+    "migrate:dev:rollback": "node --import tsx ./node_modules/knex/bin/cli.js migrate:rollback --all",
+    "migrate": "knex migrate:latest"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.18",
     "@types/express": "^5.0.2",
+    "@types/to-snake-case": "^1.0.2",
     "tsc-alias": "^1.8.16",
     "tsx": "4.19.4"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
+    "camelcase-keys": "^9.1.3",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "jose": "^6.0.11",
+    "knex": "^3.1.0",
+    "pg": "^8.16.0",
+    "snakecase-keys": "^8.0.1",
+    "to-snake-case": "^1.0.0",
+    "zod": "^3.25.24"
   }
 }
