--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.0.1",
     "clsx": "^2.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.5.3"
+    "react-hook-form": "^7.56.4",
+    "react-router-dom": "^7.5.3",
+    "zod": "^3.25.28"
   },
   "devDependencies": {
     "@types/node": "^22.15.21",
