--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,8 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.4",
     "react-router-dom": "^7.5.3",
-    "zod": "^3.25.28"
+    "zod": "^3.25.28",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@types/node": "^22.15.21",
