--- a/backend/package.json
+++ b/backend/package.json
@@ -30,6 +30,8 @@
     "jose": "^6.0.11",
     "knex": "^3.1.0",
     "pg": "^8.16.0",
+    "pino": "^9.7.0",
+    "pino-pretty": "^13.0.0",
     "snakecase-keys": "^8.0.1",
     "to-snake-case": "^1.0.0",
     "zod": "^3.25.24"
