--- a/backend/package.json
+++ b/backend/package.json
@@ -24,11 +24,13 @@
   "dependencies": {
     "bcrypt": "^6.0.0",
     "camelcase-keys": "^9.1.3",
+    "cheerio": "^1.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jose": "^6.0.11",
     "knex": "^3.1.0",
+    "node-cron": "^4.0.7",
     "pg": "^8.16.0",
     "pino": "^9.7.0",
     "pino-pretty": "^13.0.0",
