--- a/backend/package.json
+++ b/backend/package.json
@@ -6,11 +6,12 @@
   "scripts": {
     "dev": "tsx watch src/index.ts",
     "build": "tsc -p tsconfig.build.json && tsc-alias -p tsconfig.build.json",
-    "start": "node ./build/src/index.js",
-    "migrate:dev": "node --import tsx ./node_modules/knex/bin/cli.js migrate:latest",
-    "migrate:dev:make": "node --import tsx ./node_modules/knex/bin/cli.js migrate:make -x ts",
-    "migrate:dev:down": "node --import tsx ./node_modules/knex/bin/cli.js migrate:down",
-    "migrate:dev:rollback": "node --import tsx ./node_modules/knex/bin/cli.js migrate:rollback --all",
+    "prestart": "npm run migrate",
+    "start": "node ./src/index.js",
+    "migrate:dev": "node --import tsx ../node_modules/knex/bin/cli.js migrate:latest",
+    "migrate:dev:make": "node --import tsx ../node_modules/knex/bin/cli.js migrate:make -x ts",
+    "migrate:dev:down": "node --import tsx ../node_modules/knex/bin/cli.js migrate:down",
+    "migrate:dev:rollback": "node --import tsx ../node_modules/knex/bin/cli.js migrate:rollback --all",
     "migrate": "knex migrate:latest"
   },
   "devDependencies": {
