--- a/package.json
+++ b/package.json
@@ -2,8 +2,17 @@
   "name": "webmon",
   "version": "0.0.0",
   "type": "module",
+  "workspaces": [
+    "backend",
+    "frontend"
+  ],
   "scripts": {
-    "dev": "cd ./frontend && npm run dev"
+    "build:frontend": "npm run build -w frontend",
+    "build:backend": "npm run build -w backend",
+    "build": "npm run build:backend && npm run build:frontend && npm run prepare-build",
+    "prepare-build": "sh prepare-build.sh",
+    "prestart": "npm install && npm run build",
+    "start": "cd build/backend && npm run start"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
