--- a/package.json
+++ b/package.json
@@ -9,9 +9,8 @@
   "scripts": {
     "build:frontend": "npm run build -w frontend",
     "build:backend": "npm run build -w backend",
-    "build": "npm run build:backend && npm run build:frontend && npm run prepare-build",
+    "build": "npm install && npm run build:backend && npm run build:frontend && npm run prepare-build",
     "prepare-build": "sh prepare-build.sh",
-    "prestart": "npm install && npm run build",
     "start": "cd build/backend && npm run start"
   },
   "devDependencies": {
